--- a/src/assets/scss/main.css
+++ b/src/assets/scss/main.css
@@ -1,21 +1,21 @@
 @import "tailwindcss";
 
 * {
-    box-sizing: border-box;
-    color: white;
-    font-family: var(--font-default), sans-serif;
+  box-sizing: border-box;
+  color: white;
+  font-family: var(--font-default), sans-serif;
 }
 
 @theme {
-    --color-brown-plain: 255,168,106;
-    --color-brown: rgb(var(--color-brown-plain));
+  --color-brown-plain: 255, 168, 106;
+  --color-brown: rgb(var(--color-brown-plain));
 
-    --font-default: Inter, sans-serif;
-    --font-styled: Forum, sans-serif;
+  --font-default: Inter, sans-serif;
+  --font-styled: Forum, sans-serif;
 }
 
 @utility container {
-    margin-inline: auto;
-    padding-inline: 5px;
-    @apply md:max-w-[70%] max-w-[80%];
+  margin-inline: auto;
+  padding-inline: 5px;
+  @apply md:max-w-[70%] max-w-[80%];
 }
